--- a/src/app/forme/forme.component.css
+++ b/src/app/forme/forme.component.css
@@ -1,50 +1,64 @@
 form {
-	margin: 0 auto;
-	width: 400px;
-	padding: 20px;
-	background-color: #f2f2f2;
-	border-radius: 5px;
+  margin: 0 auto;
+  width: 600px;
+  padding: 55px;
+  background-color: white;
+  border-radius: 5px;
+
 }
 h1 {
   text-align: center;
+  background-color: white;
 }
+
 
 h3{
   text-align: center;
   opacity: 0.7;
+  background-color: white;
 }
 
 label {
-	display: block;
-	font-weight: bold;
-	margin-bottom: 10px;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
+  background-color: white;
 }
 
 input[type=text], select {
-	width: 100%;
-	padding: 12px 20px;
-	margin: 8px 0;
-	box-sizing: border-box;
-	border: 2px solid #ccc;
-	border-radius: 4px;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
 }
 
 button {
-	background-color: #4CAF50;
-	color: white;
-	padding: 14px 20px;
-	margin: 8px 0;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-	width: 350px;
+  background-color: #FCA311;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: 0.2px solid #D0D5DD;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
 }
 
 button.cancel {
-	background-color: #fbfcf8;
-	color: #000000
+  background-color: #fbfcf8;
+  color: #000000;
+  border: 0.2px solid #EAECF0;
+
 }
 
 .container {
-	padding: 16px;
+  padding: 16px;
+  background-color: white;
+}
+
+
+*{
+  background-color: #F9F9F9;
 }
