--- a/src/app/edit-team/edit-team.component.html
+++ b/src/app/edit-team/edit-team.component.html
@@ -8,11 +8,11 @@
   </div>
   <form style="display:flex; flex-direction: column">
     <label style="margin-bottom: 2%">Name</label>
-    <input style="border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" type="text" placeholder="Apple Inc - iOS Team">
-    <button style="background-color: #FCA311; color: white; border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 3%" type="submit">Save Changes</button>
+    <input style="border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" type="text" placeholder="Apple Inc - iOS Team" [(ngModel)]="newTeam.title">
+    <button style="background-color: #FCA311; color: white; border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 3%" type="submit" (click)="editTeam()">Save Changes</button>
     <button style="background-color:white;border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 3%" mat-button routerLink="/teams">Cancel</button>
     <button style="background-color:white;border: 2px solid #E2574E; color: #E2574E;
- border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 3%" mat-button routerLink="/teams">Delete Name Team</button>
+ border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 3%" mat-button (click)="deleteTeam()">Delete Name Team</button>
   </form>
 </div>
 </body>
