--- a/src/app/new-team/new-team.component.html
+++ b/src/app/new-team/new-team.component.html
@@ -6,10 +6,10 @@
   <div style="display: flex; justify-content: center;">
     <h3 style="font-weight: normal">Here you can create new team in your company</h3>
   </div>
-  <form style="display:flex; flex-direction: column" #myForm="ngForm" (submit)="createTeam()">
+  <form style="display:flex; flex-direction: column" [formGroup]="contactForm"  (submit)="createTeam()">
     <label style="margin-bottom: 2%">Name</label>
-    <input style="border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" type="text" placeholder="Apple Inc - iOS Team" [(ngModel)]="newTeam.title">
-    <button style="background-color: #FCA311; color: white; border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" type="submit">Create new</button>
+    <input style="border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" type="text" placeholder="Apple Inc - iOS Team" id="title" formControlName="title">
+    <button style="background-color: #FCA311; color: white; border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" type="submit" >Create new</button>
     <button style="background-color:white;border: none; border-radius: 8px; padding: 10px 18px 10px 18px; margin-bottom: 5%" mat-button routerLink="/teams">Cancel</button>
   </form>
 
